--- a/DemoApp/src/index.html
+++ b/DemoApp/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.zipy.ai/sdk/v1.0/zipy.min.umd.js" crossorigin="anonymous">
+  </script> <script> window.zipy && window.zipy.init('3db12275');</script>
 </head>
 <body>
   <app-root></app-root>
